fix(298): scope the logcat oracle to the test window and check its exit
Review nits on the delta: the logcat dump ignored the subprocess exit
status (a failed logcat invocation could pass the oracle vacuously) and
scanned the whole retained process buffer (unrelated earlier output
containing a signature string could fail a green run). The oracle now
logs a unique per-run window marker before the cycles, merges stderr,
fails on a nonzero logcat exit, and only inspects entries at or after
the marker line.

Refs #298